port to the multiloader setup

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,32 @@
 # Gradle settings
-org.gradle.jvmargs=-Xmx1G
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
-org.gradle.configuration-cache=true
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
 
-# Parchment settings
-parchment_minecraft_version=1.21.1
-parchment_mappings_version=2024.11.17
+# Project
+version=1.0.3
+group=net.twentyytwo.cleanertooltips
+java_version=21
 
-# Version settings
+# Common
 minecraft_version=1.21.1
 minecraft_version_range=[1.21, 1.21.1]
-neo_version=21.1.209
-loader_version_range=[1,)
-
-# Mod settings
 mod_id=cleanertooltips
 mod_name=Cleaner Tooltips
-mod_license=MIT
-mod_version=1.0.3
-mod_group_id=net.twentyytwo.cleanertooltips
-mod_authors=TwentyyTwo
-mod_description=A simple client-side mod that changes the tooltips of tools and armor to display their attributes as icons.
+mod_author=TwentyyTwo
+credits=
+license=MIT
+description=A simple client-side mod that changes the tooltips of tools and armor to display their attributes as icons.
+
+neo_form_version=1.21.1-20240808.144430
+
+# Parchment
+parchment_minecraft=1.21.1
+parchment_version=2024.11.17
+
+# Fabric
+fabric_version=0.109.0+1.21.1
+fabric_loader_version=0.16.9
+
+# Neoforge
+neo_version=21.1.209
+loader_version_range=[1,)
