--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -14,6 +14,9 @@ logoFile = "icon.png"
 [[mixins]]
 config = "cleanertooltips.mixins.json"
 
+[[mixins]]
+config = "cleanertooltips.neoforge.mixins.json"
+
 [[dependencies.${mod_id}]]
 modId = "neoforge"
 type = "required"
